--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
 astroid==2.4.2
 autopep8==1.5.6
+click==8.0.3
+Flask==2.0.2
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 gunicorn==20.1.0
 isort==5.5.3
+itsdangerous==2.0.1
+Jinja2==3.0.2
 lazy-object-proxy==1.4.3
+MarkupSafe==2.0.1
 mccabe==0.6.1
+psycopg2==2.9.1
 pycodestyle==2.7.0
 pygame==2.0.0
 pylint==2.6.0
 python-dotenv==0.17.1
 six==1.15.0
+SQLAlchemy==1.4.26
 toml==0.10.1
+Werkzeug==2.0.2
 wrapt==1.12.1
